src/objects/n2de__Tag_Cap__c.object
<CustomObject>
    <fields>
        <fullName>n2de__Cap_value__c</fullName>
        <label>Cap value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Capping_pattern__c</fullName>
        <label>Capping Pattern</label>
        <referenceTo>n2de__Capping_Pattern__c</referenceTo>
        <relationshipLabel>Tag Caps</relationshipLabel>
        <relationshipName>Tag_Caps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>n2de__Tag_value__c</fullName>
        <label>Tag value</label>
        <referenceTo>n2de__Tag_Value__c</referenceTo>
        <relationshipLabel>Tag Caps</relationshipLabel>
        <relationshipName>Tag_Caps</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Tag Cap</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tag Caps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>